[project]
name = "nonebot_plugin_furryfusion"
version = "0.1.5"
description = "基于NoneBot2进行适配的兽聚动态查询插件"
authors = [
    {name = "Ekac", email = "2396382559@qq.com"},
]
dependencies = ["nonebot2", "httpx", "nonebot-adapter-onebot"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
